[MVT] CTW fails with "assert(vk->is__Value()) failed: unexpected value type klass"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      applications/ctw/Modules.java

      Fails on java/lang/__Value

      # assert(vk->is__Value()) failed: unexpected value type klass

      Current CompileTask:
      C2: 52683 9604 b java.lang.__Value::<init> (1 bytes)

      Stack: [0x00007f388143a000,0x00007f388153b000], sp=0x00007f3881537c40, free space=1015k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x17f6a52] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x162
      V [libjvm.so+0x17f781f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xb3a25d] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
      V [libjvm.so+0x179b235] ValueTypeNode::is_loaded(PhaseGVN*, ciValueKlass*, Node*, int)+0x4b5
      V [libjvm.so+0x179c9a5] ValueTypeNode::make_from_oop(PhaseGVN&, Node*&, Node*, Node*, bool, bool)+0xdb5
      V [libjvm.so+0x14c43ae] Compile::build_start_state(StartNode*, TypeFunc const*)+0x40e
      V [libjvm.so+0xa9ee9b] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xf9b
      V [libjvm.so+0x8a9232] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x2e2
      V [libjvm.so+0xaaa51e] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x38e
      V [libjvm.so+0xaab111] CompileBroker::compiler_thread_loop()+0x241
      V [libjvm.so+0x1737dbe] JavaThread::thread_main_inner()+0x22e
      V [libjvm.so+0x1738039] JavaThread::run()+0x1b9
      V [libjvm.so+0x146c90a] thread_native_entry(Thread*)+0xfa
      C [libpthread.so.0+0x7dc5] start_thread+0xc5

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: