8191818: [MVT] CTW fails with "assert(vk->is__Value()) failed: unexpected value type klass"

Reviewed-by: roland